--- a/Frontend/App/Views/Shared/_Layout.cshtml
+++ b/Frontend/App/Views/Shared/_Layout.cshtml
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>@ViewData["Title"] - App</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+    crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
 </head>
 
 <body>
-  <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
-  <link rel="stylesheet" href="site.css">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03"
@@ -20,11 +21,6 @@
 
     <div class="collapse navbar-collapse" id="navbarColor03">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="cliente.html">Cadastro
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Clientes</a>
         </li>
@@ -52,28 +48,13 @@
       </form>
     </div>
   </nav>
+  <div class="container">
+    <main role="main" class="pb-3">
+      @RenderBody()
+    </main>
+  </div>
 
-  <ul>
-    
-    <li class="clientes"></li>
-  </ul>
-  <script>
-    var clientes = document.querySelector(".clientes")
-    buscarClientes()
-
-    function buscarClientes() {
-
-      document.addEventListener("DOMContentLoaded", function (event) {
-        fetch(`https://localhost:5001/clientes/`)
-          .then(res => res.json())
-          .then(data => data.forEach(element => {
-            clientes.append(element.nome)
-          }))
-
-      });
-      return this
-    }
-  </script>
+  @await RenderSectionAsync("Scripts", required: false)
 </body>
 
 </html>
