--- a/Frontend/App/Views/Clientes/Contatos.cshtml
+++ b/Frontend/App/Views/Clientes/Contatos.cshtml
@@ -1,7 +1,9 @@
+   @model ContatoViewModel
+   @{}
    <div class="container">
         <div class="mt-2">
         <div class="float-left">
-            <a asp-action="Enderecos" class="btn btn-link"><em class="fas fa-arrow-left"></em> Voltar</a>
+            <a asp-action="Enderecos" asp-route-clienteId='@TempData["ClienteId"]' class="btn btn-link"><em class="fas fa-arrow-left"></em> Voltar</a>
         </div>
         <div class="float-right">
             <a asp-controller="Home" asp-action="Index" class="btn btn-link">Sair <em class="fas fa-sign-out-alt"></em></a>
@@ -15,6 +17,7 @@
         </div>
     <div class="card card-body mt-2">
         <form id="form" method="POST">
+            <input asp-for='ClienteId' >
             <div class="form-group">
                 <label for="nome">Nome</label>
                 <input class="form-control" id="nome" name="nome" type="text">
