--- a/Frontend/App/Views/Clientes/Enderecos.cshtml
+++ b/Frontend/App/Views/Clientes/Enderecos.cshtml
@@ -1,10 +1,13 @@
+   @model EnderecoViewModel
+@{
+}
    <div class="container">
         <div class="mt-2">
         <div class="float-left">
-            <a asp-action="DadosBasicos" class="btn btn-link"><em class="fas fa-arrow-left"></em> Voltar</a>
+            <a asp-action="DadosBasicos" asp-route-clienteId='@TempData["ClienteId"]' class="btn btn-link"><em class="fas fa-arrow-left"></em> Voltar</a>
         </div>
         <div class="float-right">
-            <a asp-action="Contatos" class="btn btn-link">Próximo <em class="fas fa-arrow-right"></em></a>
+            <a asp-action="Contatos" asp-route-clienteId='@TempData["ClienteId"]' class="btn btn-link">Próximo <em class="fas fa-arrow-right"></em></a>
         </div>
         </div>
         <br>
@@ -14,7 +17,8 @@
             <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span class="p-2 bg-light alert-secondary">Contato</span></div>
         </div>
         <div class="card card-body mt-2">
-            <form id="form" method="POST">
+            <form asp-action="Enderecos">
+                <input asp-for='ClienteId' >
                 <div class="form-group">
                     <label for="nome">Cep</label>
                     <input class="form-control" id="cep" name="cep" type="text">
