--- a/Frontend/App/Views/Clientes/Contatos.cshtml
+++ b/Frontend/App/Views/Clientes/Contatos.cshtml
@@ -1,39 +1,44 @@
-   @model ContatoViewModel
-   @{}
-   <div class="container">
-        <div class="mt-2">
+@model ContatoViewModel
+@{}
+<div class="container">
+    <div class="mt-2">
         <div class="float-left">
-            <a asp-action="Enderecos" asp-route-clienteId='@TempData["ClienteId"]' class="btn btn-link"><em class="fas fa-arrow-left"></em> Voltar</a>
+            <a asp-action="Enderecos" asp-route-clienteId='@TempData["ClienteId"]' class="btn btn-link"><em
+                    class="fas fa-arrow-left"></em> Voltar</a>
         </div>
         <div class="float-right">
-            <a asp-controller="Home" asp-action="Index" class="btn btn-link">Sair <em class="fas fa-sign-out-alt"></em></a>
+            <a asp-controller="Home" asp-action="Index" class="btn btn-link">Sair <em
+                    class="fas fa-sign-out-alt"></em></a>
         </div>
-        </div>
-        <br>
-        <div class="progress mt-3">
-            <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span class="p-2 bg-light alert-secondary">Dados Básicos</span></div>
-            <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span class="p-2 bg-light alert-secondary">Endereço</span></div>
-            <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Contato</div>
-        </div>
+    </div>
+    <br>
+    <div class="progress mt-3">
+        <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0"
+            aria-valuemax="100"><span class="p-2 bg-light alert-secondary">Dados Básicos</span></div>
+        <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0"
+            aria-valuemax="100"><span class="p-2 bg-light alert-secondary">Endereço</span></div>
+        <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0"
+            aria-valuemax="100">Contato</div>
+    </div>
     <div class="card card-body mt-2">
         <form id="form" method="POST">
-            <input asp-for='ClienteId' >
+            <input asp-for='ClienteId'>
             <div class="form-group">
-                <label for="nome">Nome</label>
-                <input class="form-control" id="nome" name="nome" type="text">
+                <label asp-for="TipoDeContato"></label>
+                <select class="form-control" asp-for="TipoDeContato">
+                    <option value="">Selecione</option>
+                    <option value="1">TelefoneComercial</option>
+                    <option value="2">TelefoneResidencial</option>
+                    <option value="3">Celular</option>
+                    <option value="4">Email</option>
+                    <option value="5">RedeSocial</option>
+                </select>
             </div>
             <div class="form-group">
-                <label for="nome">Email</label>
-                <input class="form-control" id="cpf" name="cpf" type="email" required>
+                <label asp-for="Valor"></label>
+                <input class="form-control" asp-for="Valor" required>
             </div>
-            <div class="form-group">
-                <label for="nome">RG</label>
-                <input class="form-control" id="rg" name="rg" type="text">
-            </div>
-            <div class="form-group">
-                <label for="nome">Data de nascimento</label>
-                <input class="form-control" id="dataDeNascimento" name="dataDeNascimento" type="text">
-            </div>
+
             <div class="float-right">
                 <input class="btn btn-success" type="submit" value="Salvar">
             </div>
