--- a/Frontend/App/Views/Clientes/Contatos.cshtml
+++ b/Frontend/App/Views/Clientes/Contatos.cshtml
@@ -1,15 +1,18 @@
-@model ContatoViewModel
-@{}
+@model IEnumerable<ContatoViewModel>
+
 <div class="container">
     <div class="mt-2">
         <div class="float-left">
             <a asp-action="Enderecos" asp-route-clienteId='@TempData["ClienteId"]' class="btn btn-link"><em
                     class="fas fa-arrow-left"></em> Voltar</a>
         </div>
-        <div class="float-right">
-            <a asp-controller="Home" asp-action="Index" class="btn btn-link">Sair <em
-                    class="fas fa-sign-out-alt"></em></a>
-        </div>
+        @if (Model != null)
+        {
+            <div class="float-right">
+                <a asp-controller="Home" asp-action="Index" class="btn btn-link">Sair <em
+                        class="fas fa-sign-out-alt"></em></a>
+            </div>
+        }
     </div>
     <br>
     <div class="progress mt-3">
@@ -18,30 +21,30 @@
         <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0"
             aria-valuemax="100"><span class="p-2 bg-light alert-secondary">Endereço</span></div>
         <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0"
-            aria-valuemax="100">Contato</div>
+            aria-valuemax="100">Contatos</div>
     </div>
-    <div class="card card-body mt-2">
-        <form id="form" method="POST">
-            <input asp-for='ClienteId'>
-            <div class="form-group">
-                <label asp-for="TipoDeContato"></label>
-                <select class="form-control" asp-for="TipoDeContato">
-                    <option value="">Selecione</option>
-                    <option value="1">TelefoneComercial</option>
-                    <option value="2">TelefoneResidencial</option>
-                    <option value="3">Celular</option>
-                    <option value="4">Email</option>
-                    <option value="5">RedeSocial</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Valor"></label>
-                <input class="form-control" asp-for="Valor" required>
-            </div>
 
-            <div class="float-right">
-                <input class="btn btn-success" type="submit" value="Salvar">
-            </div>
-        </form>
+    <div class="card card-body mt-2">
+        <div class="form-group">
+            <a class="btn btn-primary float-right" asp-route-clienteId='@TempData["ClienteId"]'
+                asp-action="NovoContato">Adicionar</a>
+        </div>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">Tipo de contato</th>
+                    <th scope="col">Valor</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@item.TipoDeContato</td>
+                        <td>@item.Valor</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
 </div>
