--- a/Frontend/App/Views/Clientes/DadosBasicos.cshtml
+++ b/Frontend/App/Views/Clientes/DadosBasicos.cshtml
@@ -1,46 +1,51 @@
-   @model DadosBasicosViewModel
+@model DadosBasicosViewModel
 @{
 }
-   <div class="container">
-        <div class="mt-2">
-            <div class="float-left">
-                <a asp-controller="Home" asp-action="Index" class="btn btn-link"><em class="fas fa-arrow-left"></em> Voltar</a>
+<div class="container">
+    <div class="mt-2">
+        <div class="float-left">
+            <a asp-controller="Home" asp-action="Index" class="btn btn-link"><em class="fas fa-arrow-left"></em>
+                Voltar</a>
+        </div>
+        @if (Model != null)
+        {
+            <div class="float-right">
+                <a asp-action="Enderecos" asp-route-clienteId='@TempData["ClienteId"]' class="btn btn-link">Próximo <em
+                        class="fas fa-arrow-right"></em></a>
+            </div>
+        }
+    </div>
+    <br>
+
+    <div class="progress mt-3">
+        <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0"
+            aria-valuemax="100">Dados Básicos</div>
+        <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0"
+            aria-valuemax="100"><span class="p-2 bg-light alert-secondary">Endereço</span></div>
+        <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0"
+            aria-valuemax="100"><span class="p-2 bg-light alert-secondary">Contato</span></div>
+    </div>
+    <div class="card card-body mt-2">
+        <form asp-action="DadosBasicos">
+            <div class="form-group">
+                <label asp-for="Nome"></label>
+                <input class="form-control" asp-for="Nome">
+            </div>
+            <div class="form-group">
+                <label asp-for="Rg"></label>
+                <input class="form-control" asp-for="Rg" type="text" required>
+            </div>
+            <div class="form-group">
+                <label asp-for="Cpf"></label>
+                <input class="form-control" asp-for="Cpf" type="text" required>
+            </div>
+            <div class="form-group">
+                <label asp-for="DataDeNascimento"></label>
+                <input class="form-control" asp-for="DataDeNascimento" type="date" required>
             </div>
             <div class="float-right">
-                <a asp-action="Enderecos" asp-route-clienteId='@TempData["ClienteId"]' class="btn btn-link">Próximo <em class="fas fa-arrow-right"></em></a>
+                <button class="btn btn-success" type="submit">Salvar</button>
             </div>
-        </div>
-        <br>
-
-        <div class="progress mt-3">
-            <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0"
-                aria-valuemax="100">Dados Básicos</div>
-            <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0"
-                aria-valuemax="100"><span class="p-2 bg-light alert-secondary">Endereço</span></div>
-            <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0"
-                aria-valuemax="100"><span class="p-2 bg-light alert-secondary">Contato</span></div>
-        </div>
-        <div class="card card-body mt-2">
-           <form asp-action="DadosBasicos">
-                <div class="form-group">
-                    <label asp-for="Nome"></label>
-                    <input class="form-control" asp-for="Nome">
-                </div>
-                <div class="form-group">
-                    <label asp-for="Rg"></label>
-                    <input class="form-control" asp-for="Rg" type="text" required>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Cpf"></label>
-                    <input class="form-control" asp-for="Cpf" type="text" required>
-                </div>
-                <div class="form-group">
-                    <label asp-for="DataDeNascimento"></label>
-                    <input class="form-control" asp-for="DataDeNascimento" type="text" required>
-                </div>
-                <div class="float-right">
-                    <button class="btn btn-success" type="submit" >Salvar</button>
-                </div>
-            </form>
-        </div>
+        </form>
     </div>
+</div>
