--- a/Frontend/App/Views/Clientes/Enderecos.cshtml
+++ b/Frontend/App/Views/Clientes/Enderecos.cshtml
@@ -1,43 +1,53 @@
-   @model EnderecoViewModel
-@{
-}
-   <div class="container">
-        <div class="mt-2">
+@model IEnumerable<EnderecoViewModel>
+<div class="container">
+    <div class="mt-2">
         <div class="float-left">
-            <a asp-action="DadosBasicos" asp-route-clienteId='@TempData["ClienteId"]' class="btn btn-link"><em class="fas fa-arrow-left"></em> Voltar</a>
+            <a asp-action="DadosBasicos" asp-route-clienteId='@TempData["ClienteId"]' class="btn btn-link"><em
+                    class="fas fa-arrow-left"></em> Voltar</a>
         </div>
+        @if (Model != null)
+        {
         <div class="float-right">
-            <a asp-action="Contatos" asp-route-clienteId='@TempData["ClienteId"]' class="btn btn-link">Próximo <em class="fas fa-arrow-right"></em></a>
+            <a asp-action="Contatos" asp-route-clienteId='@TempData["ClienteId"]' class="btn btn-link">Próximo <em
+                    class="fas fa-arrow-right"></em></a>
         </div>
-        </div>
-        <br>
-        <div class="progress mt-3">
-            <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span class="p-2 bg-light alert-secondary">Dados Básicos</span></div>
-            <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Endereço</div>
-            <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span class="p-2 bg-light alert-secondary">Contato</span></div>
-        </div>
-        <div class="card card-body mt-2">
-            <form asp-action="Enderecos">
-                <input asp-for='ClienteId' >
-                <div class="form-group">
-                    <label for="nome">Cep</label>
-                    <input class="form-control" id="cep" name="cep" type="text">
-                </div>
-                <div class="form-group">
-                    <label for="nome">Rua</label>
-                    <input class="form-control" id="rua" name="rua" type="text">
-                </div>
-                <div class="form-group">
-                    <label for="nome">Bairro</label>
-                    <input class="form-control" id="bairro" name="bairro" type="text">
-                </div>
-                <div class="form-group">
-                    <label for="nome">Numero</label>
-                    <input class="form-control" id="numero" name="numero" type="text">
-                </div>
-                <div class="float-right">
-                    <input class="btn btn-success" type="submit" value="Salvar">
-                </div>
-            </form>
-        </div>
+        }
     </div>
+    <br>
+    <div class="progress mt-3">
+        <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0"
+            aria-valuemax="100"><span class="p-2 bg-light alert-secondary">Dados Básicos</span></div>
+        <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0"
+            aria-valuemax="100">Endereços</div>
+        <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0"
+            aria-valuemax="100"><span class="p-2 bg-light alert-secondary">Contatos</span></div>
+    </div>
+
+    <div class="card card-body mt-2">
+        <div class="form-group">
+            <a class="btn btn-primary float-right" asp-route-clienteId='@TempData["ClienteId"]'
+                asp-action="NovoEndereco">Adicionar</a>
+        </div>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">Cep</th>
+                    <th scope="col">Rua</th>
+                    <th scope="col">Numero</th>
+                    <th scope="col">Bairro</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@item.Cep</td>
+                        <td>@item.Rua</td>
+                        <td>@item.Numero</td>
+                        <td>@item.Bairro</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
