--- a/Frontend/App/Views/Clientes/Index.cshtml
+++ b/Frontend/App/Views/Clientes/Index.cshtml
@@ -1,30 +1,37 @@
 @model IEnumerable<DadosBasicosViewModel>
-    @{
+@{
     ViewData["Title"] = "Clientes";
-    }
+}
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.23/css/jquery.dataTables.min.css">
 
-
-    <div class="container">
-        <h3 class="mt-2">@ViewData["Title"]</h3>
-        <div class="card card-body mt-2">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th scope="col">CPF</th>
-                        <th scope="col">Nome</th>
-                        <th scope="col">Nascimento</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
+<div class="container">
+    <h3 class="mt-2">@ViewData["Title"]</h3>
+    <div class="card card-body mt-2">
+        <table class="table table-hover clientes">
+            <thead>
+                <tr>
+                    <th scope="col">CPF</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Nascimento</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
                     <tr>
                         <th>@item.Cpf</th>
                         <td>@item.Nome</td>
                         <td>@item.DataDeNascimento</td>
                     </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
+                }
+            </tbody>
+        </table>
     </div>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('.clientes').DataTable();
+    });
+</script>
