--- a/Frontend/App/Views/Clientes/DadosBasicos.cshtml
+++ b/Frontend/App/Views/Clientes/DadosBasicos.cshtml
@@ -27,6 +27,7 @@
     </div>
     <div class="card card-body mt-2">
         <form asp-action="DadosBasicos">
+            <input asp-for="Id">
             <div class="form-group">
                 <label asp-for="Nome"></label>
                 <input class="form-control" asp-for="Nome">
